# neofontlib

./: .gitignore  AppletID.h  CMakeLists.txt  LICENSE  NeoCharacter.cc  NeoCharacter.h  NeoCharacterEncoding.cc  NeoCharacterEncoding.h  NeoFont.cc  NeoFont.h  PresetFonts.cc  PresetFonts.h  README.md  main.cpp
include/: AppletID.h
include/neofontlib/: NeoCharacter.h  NeoFont.h
src/: NeoCharacter.cc  NeoCharacterEncoding.cc  NeoFont.cc
test/: test_main.cpp
unused/: AppletID.h
